--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=onlinelibrary
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.username=yusup
-spring.datasource.password=12345
+spring.datasource.username=
+spring.datasource.password=
 spring.datasource.url=jdbc:mysql://localhost:3306/onlinelibrary
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
