--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
+    "boxicons": "^2.1.4",
     "date-fns": "^4.1.0",
     "pinia": "^2.2.4",
     "vue": "^3.5.12",
